# EriCa

EriCa/: CMakeLists.txt  main.c
EriCa/BOUNDARY/: boundary.c  boundary.h  monitors.c
EriCa/EQNTNS/: convflx.c  coupled.c  depupdt.c  distance.c  dnsbsd.c  eqntns.h  gradnts.c  maths.c  piso.c  presvel.c  simple.c  sources.c  timestp.c  turb.c  turb.h  viscflx.c
EriCa/MESH/: ensight.c  mesh.h  meshset.h  mshcrt.c  mshgrph.c  mshpnt.c  mshtool.c  rwsol.c
EriCa/SIMULATION/: logs.c  logstools.c  simini.c  simtool.c  simulation.h  user_order.c
MariSa/: CMakeLists.txt  kirsol.c  marisa.h  matalg.c  matbas.c  matman.c  precon.c  query.c
